--- a/goit-js-hw-13-image-finder./src/styles.css
+++ b/goit-js-hw-13-image-finder./src/styles.css
@@ -116,7 +116,7 @@ button.learn-more:active::before {
 /*# sourceMappingURL=styles.css.map */
 
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
-/* @import url(https://raw.github.com/FortAwesome/Font-Awesome/master/docs/assets/css/font-awesome.min.css); */
+@import url(https://raw.github.com/FortAwesome/Font-Awesome/master/docs/assets/css/font-awesome.min.css);
 
 body {
   background: #ddd;
