--- a/goit-js-hw-13-image-finder./src/styles.css
+++ b/goit-js-hw-13-image-finder./src/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik:700&display=swap');
-
+/* @import 'src/styles/main'; */
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -116,7 +116,7 @@ button.learn-more:active::before {
 /*# sourceMappingURL=styles.css.map */
 
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
-@import url(https://raw.github.com/FortAwesome/Font-Awesome/master/docs/assets/css/font-awesome.min.css);
+/* @import url(https://raw.github.com/FortAwesome/Font-Awesome/master/docs/assets/css/font-awesome.min.css); */
 
 body {
   background: #ddd;
